# up

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  fly.toml  shell.nix
up-cli/: Cargo.toml
up-cli/src/: main.rs
up-cli/src/generate/: ca_certificate.rs  certificate.rs  jwks.rs  jwt.rs  keypair.rs  mod.rs  server_env.rs
up-cli/src/verify/: jwt.rs  mod.rs
up-core/: Cargo.toml
up-core/src/: auth.rs  jwks.rs  jwt.rs  lib.rs
up-server/: Cargo.toml  build.rs
up-server/migrations/: 001_initial.sql
up-server/src/: app.rs  auth.rs  database.rs  jobs.rs  lib.rs  main.rs  mask.rs  notifier.rs  shortid.rs
up-server/src/api/: json.rs  mod.rs  ui.rs
up-server/src/api/rest/: check.rs  checks.rs  mod.rs  projects.rs
up-server/src/api/rest/model/: check.rs  checks.rs  mod.rs  projects.rs
up-server/src/api/v1/: checks.rs  mod.rs  notifications.rs  ping.rs  projects.rs
up-server/src/integrations/: mod.rs  postmark.rs
up-server/src/jobs/: enqueue_alerts.rs  mod.rs  send_alerts.rs
up-server/src/repository/: account.rs  auth.rs  check.rs  mod.rs  notification.rs  project.rs
up-server/src/repository/dto/: account.rs  check.rs  mod.rs  project.rs
up-server/src/repository/queries/: account.rs  check.rs  mod.rs  project.rs
up-server/tests/: mod.rs
up-server/tests/api/: health.rs  projects.rs
up-ui/: README.md  bun.lockb  package.json
up-ui/components/: check-list.tsx  project-list.tsx
up-ui/models/: check.ts  project.ts
up-ui/pages/: _app.tsx  _document.tsx  checks.tsx  index.tsx
up-ui/styles/: globals.css
