[package]
name = "up-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.58", features = ["std", "backtrace"] }
argh = "0.1.8"
axum = { version = "0.5.13", features = ["ws"] }
hyper = { version = "0.14.20", features = ["server", "tcp", "stream"] }
axum-macros = "0.2.3"
camino = "1.0.9"
chrono = { version = "0.4.19", features = ["serde"] }
directories = "4.0.1"
futures = "0.3.21"
futures-util = "0.3.21"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
rust-embed = { version = "6.4.0", features = ["axum"] }
sea-query = { version = "0.26.2", features = ["sqlx-postgres", "postgres", "with-json", "with-uuid", "with-chrono"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "json", "tls"] }
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
