[package]
name = "up-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.60", features = ["std", "backtrace"] }
argh = "0.1.8"
axum = { version = "0.5.13", features = ["ws", "headers"] }
hyper = { version = "0.14.20", features = ["server", "tcp", "stream"] }
axum-macros = "0.2.3"
camino = "1.0.9"
chrono = { version = "0.4.20", features = ["serde"] }
directories = "4.0.1"
futures = "0.3.21"
futures-util = "0.3.21"
harsh = "0.2.2"
lazy_static = "1.4.0"
miette = { version = "5.2.0", features = ["fancy"] }
mime_guess = "2.0.4"
rust-embed = { version = "6.4.0", features = ["axum"] }
sea-query = { version = "0.26.2", features = ["sqlx-postgres", "postgres", "with-json", "with-uuid", "with-chrono"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "json", "tls"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
async-trait = "0.1.57"
