[package]
name = "up-server"
version = "0.1.0"
edition = "2021"
default-run = "up-server"

[dependencies]
anyhow = { version = "1.0.60", features = ["std", "backtrace"] }
argh = "0.1.8"
async-trait = "0.1.57"
axum = { version = "0.5.15", features = ["ws", "headers"] }
hyper = { version = "0.14.20", features = ["server", "tcp", "stream"] }
axum-macros = "0.2.3"
camino = "1.0.9"
chrono = { version = "0.4.21", features = ["serde"] }
directories = "4.0.1"
dotenv = "0.15.0"
futures = "0.3.21"
futures-util = "0.3.21"
lazy_static = "1.4.0"
miette = { version = "5.3.0", features = ["fancy"] }
mime_guess = "2.0.4"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"] }
rust-embed = { version = "6.4.0", features = ["axum"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "json", "tls"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
url = "2.2.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
